--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-modal": "^3.16.3",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,6 +29,7 @@
     "lucide-react": "^0.358.0",
     "openai": "^5.19.1",
     "react": "^18.2.0",
+    "react-barcode": "^1.6.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.5.0",
