fix: move OpenAI API to serverless function for security

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 [build]
   publish = "build"
   command = "npm run build"
+  functions = "netlify/functions"
+
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["openai"]
 
 # הגדרות ניתוב SPA
 [[redirects]]
